projects/nanousd-labs/nanousd/tests/usda/invalid/uint_overflow.usda
#usda 1.0

def Scope "T"
{
    uint tooLarge = 4294967296
}
